<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:padding="16dp"
    android:background="@color/backgroundColor"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="2"/>

    <TextView
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:background="@drawable/background_logo"
        android:text="@string/timerName"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="@android:color/holo_green_light"
        android:gravity="center"
        android:textStyle="bold"
        android:textSize="60sp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.5"/>

    <TextView
        android:id="@+id/chronometer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_weight="2"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="@android:color/holo_blue_dark"
        android:textStyle="bold"
        android:textSize="60sp"
        android:text="@string/initialTime"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.5"/>

    <TextView
        android:id="@+id/actionType"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/holo_green_light"
        android:textSize="25sp"
        android:textColor="@android:color/holo_red_dark"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textAlignment="center"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1.5"/>

    <LinearLayout
        android:orientation="horizontal"
        android:background="@drawable/first_layout_shape"
        android:padding="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="bottom"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp">

        <Button
            android:id="@+id/startButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/startButton"
            tools:ignore="NestedWeights"
            android:onClick="startChronometer"
            android:background="@drawable/round_button"/>

        <Button
            android:id="@+id/pauseButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/pauseButton"
            android:onClick="pauseChronometer"
            android:background="@drawable/round_button"/>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:background="@drawable/second_layout_shape"
        android:padding="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="top"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp">

        <Button
            android:id="@+id/stopButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/stopButton"
            tools:ignore="NestedWeights"
            android:onClick="stopChronometer"
            android:background="@drawable/round_button"/>

        <Button
            android:id="@+id/settingsButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/settingsButton"
            android:onClick="openSettings"
            android:background="@drawable/round_button"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1.5"/>
</LinearLayout>