<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@color/backgroundColor"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2.5"
        android:orientation="horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_weight="1"
            android:layout_gravity="bottom"
            android:background="@drawable/round_button"
            android:text="@string/work_time"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textSize="25sp"
            tools:ignore="NestedWeights,RtlCompat" />

        <EditText
            android:id="@+id/workTime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_weight="1"
            android:layout_gravity="bottom"
            android:background="@drawable/second_button"
            android:ems="10"
            android:inputType="number"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textSize="25sp"
            tools:ignore="RtlCompat" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.76"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3.25"
        android:orientation="horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_weight="1"
            android:layout_gravity="top"
            android:background="@drawable/round_button"
            android:text="@string/pause_time"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textSize="25sp"
            tools:ignore="NestedWeights,RtlCompat" />

        <EditText
            android:id="@+id/pauseTime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_weight="1"
            android:layout_gravity="top"
            android:background="@drawable/second_button"
            android:ems="10"
            android:inputType="number"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textSize="25sp"
            tools:ignore="RtlCompat" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:id="@+id/backButton"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/backButton"
            android:textSize="20sp"
            tools:ignore="NestedWeights,OnClick"
            android:onClick="returnWithoutSave"
            android:background="@drawable/round_button"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="3"
            tools:ignore="NestedWeights">

        </LinearLayout>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:id="@+id/saveButton"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/saveButton"
            android:textSize="20sp"
            tools:ignore="NestedWeights,OnClick"
            android:onClick="saveAndReturn"
            android:background="@drawable/round_button"/>

    </LinearLayout>


</LinearLayout>